Various dark mode fixes; padding on vertical tabs pane.

--- a/styles/base/_dropbutton.scss
+++ b/styles/base/_dropbutton.scss
@@ -109,3 +109,9 @@
     }
   }
 }
+
+.gin--dark-mode.js {
+  .dropbutton-widget {
+    background-color: var(--gin-bg-input);
+  }
+}
